--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <div class="students__videos__atmo__title text h3">
                     Атмосфера на уроках
                 </div> 
-                <!-- <div class="students__videos__atmo__gallery">
+                <div class="students__videos__atmo__gallery">
                     <video class="video" src="video/anu1.MP4" controls></video>
                     <video class="video" src="video/anu2.mp4" controls></video>
                     <video class="video" src="video/anu3.mp4" controls></video>
@@ -409,7 +409,7 @@
                     <video class="video" src="video/uu4.MP4" controls></video>
                     <video class="video" src="video/uu5.MP4" controls></video>
                     <video class="video" src="video/uu6.MP4" controls></video>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="students__more h6">
