--- a/index.html
+++ b/index.html
@@ -389,15 +389,15 @@
                     Атмосфера на уроках
                 </div> 
                 <div class="students__videos__atmo__gallery">
-                    <video class="video" src="video/anu1.MP4" controls></video>
-                    <video class="video" src="video/anu2.mp4" controls></video>
-                    <video class="video" src="video/anu3.mp4" controls></video>
-                    <video class="video" src="video/anu4.MP4" controls></video>
-                    <video class="video" src="video/anu5.mp4" controls></video>
-                    <video class="video" src="video/anu6.mp4" controls></video>
-                    <video class="video" src="video/anu8.MP4" controls></video>
-                    <video class="video" src="video/anu9.mp4" controls></video>
-                    <video class="video" src="video/anu10.mp4" controls></video>
+                    <video class="video" src="video/anu1.MP4" controls preload="none"></video>
+                    <video class="video" src="video/anu2.mp4" controls preload="none"></video>
+                    <video class="video" src="video/anu3.mp4" controls preload="none"></video>
+                    <video class="video" src="video/anu4.MP4" controls preload="none"></video>
+                    <video class="video" src="video/anu5.mp4" controls preload="none"></video>
+                    <video class="video" src="video/anu6.mp4" controls preload="none"></video>
+                    <video class="video" src="video/anu8.MP4" controls preload="none"></video>
+                    <video class="video" src="video/anu9.mp4" controls preload="none"></video>
+                    <video class="video" src="video/anu10.mp4" controls preload="none"></video>
                 </div>
                 <div class="students__videos__atmo__title text h3">
                     Успехи учеников
